<resources>
    <string name="app_name">easyDo</string>

    <!--Add/edit Task menu-->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="task_title">Task title</string>
    <string name="add_new_task">Task</string>
    <string name="priority">Priority</string>

    <!--Settings Menu-->
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>

    <!--Language Menu-->
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="hungarian">Hungarian</string>

    <!--Navigation-->
    <string name="todo">ToDo</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>

    <!--Runtime Error Texts for toasts-->
    <string name="no_title">No title given</string>

    <string name="delete_notification">Do you want to delete this task?</string>

    <!--Alarmdialog -->
    <string name="alarmdialog_title">Do you want to save this task in your calendar?</string>
    <string name="alarmdialog_message">Press yes to save your task in your calendar and in your app.\nPress no to save it only in your app.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Priorities -->
    <string name="none">No</string>
    <string name="low">Unimportant (Green mark)</string>
    <string name="medium">Important (Yellow mark)</string>
    <string name="high">Very important (Red mark)</string>



</resources>