<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:background="@color/bluegrey600"
    android:id="@+id/grid_layout_add_task"
    android:translationZ="10dp"
    android:layout_gravity="center"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

        <TextView
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center|left"

            android:text="@string/task_title" />
        <EditText
            android:id="@+id/edit_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:layout_weight="2"
            android:gravity="bottom"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/white"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

        <TextView
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center|left"
            android:text="@string/location" />
        <EditText
            android:id="@+id/edit_task_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/location"
            android:gravity="bottom"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/white"

            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

        <TextView
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center|left"
            android:text="@string/date"

            />
        <EditText
            android:id="@+id/edit_task_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:layout_weight="2"
            android:gravity="bottom"
            android:focusable="false"
            android:textColor="@color/white"


            />
        <EditText
            android:id="@+id/edit_task_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Time"
            android:layout_weight="1"
            android:gravity="bottom"
            android:focusable="false"
            android:textColor="@color/white"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >

        <TextView
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:width="2dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center|left"
            android:text="Priority" />

            <Spinner
                android:id="@+id/edit_task_Priority"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:inputType="none"
                android:popupBackground="@color/bluegrey600"
                android:textColor="@color/white"

                />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/description"
            android:gravity="bottom"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <EditText
            android:id="@+id/edit_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:gravity="bottom"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:maxLines="25"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        >
        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/textColor"
            android:text="@string/save"
            />
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            />
    </LinearLayout>


</GridLayout>